# soul_frontend

./: .gitignore  README.md  RUST_PROJECT_STRUCTURE.md  cargo_clippy_all.py  cargo_fmt_all.py
ast_converter/: Cargo.toml
ast_converter/src/: lib.rs
ast_converter/src/steps/: mod.rs
atrstact_syntax_tree/abstract_syntax_tree/: function.rs  statment.rs
frontend/: AST_name_resolved.soulc  AST_parsed.soulc  AST_tree.soulc  Cargo.toml  sementic_tree.soulc  todo.md  tree.soulc
frontend/soul_src/: book.soul  main.soul  reflect.soul  syntax.soul  trait.soul  types.soul
frontend/src/: lib.rs  main.rs  soul_names.rs
hir_converter/: Cargo.toml
hir_converter/src/: lib.rs  lower_expression.rs  lower_for_pattern.rs  lower_item.rs  lower_type.rs
models/: Cargo.toml
models/src/: define_enums.rs  error.rs  lib.rs  soul_names.rs  soul_page_path.rs  symbool_kind.rs
soul_ast/: Cargo.toml
soul_ast/ast/: Cargo.toml
soul_ast/ast_model/: Cargo.toml
soul_ast/ast_parser/: Cargo.toml
soul_ast/run_ast/: Cargo.toml
soul_ast/run_ast/src/: lib.rs
soul_ast/soul_name_resolver/: Cargo.toml
soul_ast/src/: error.rs  lib.rs  soul_page_path.rs  symbool_kind.rs
soul_hir/: Cargo.toml
soul_hir/hir_literal_interpreter/: Cargo.toml
soul_hir/hir_literal_interpreter/src/: binary.rs  lib.rs  unary.rs  utils.rs
soul_hir/hir_model/: Cargo.toml
soul_hir/hir_parser/: Cargo.toml
soul_hir/hir_typed_context/: Cargo.toml
soul_hir/hir_typed_context/src/: expression.rs  handle_type.rs  infer_table.rs  lib.rs  statement.rs
soul_hir/run_hir/: Cargo.toml
soul_hir/src/: expression.rs  hir_type.rs  item.rs  lib.rs  main.rs  scope.rs  statement.rs
soul_hir/typed_hir_model/: Cargo.toml
soul_hir/typed_hir_model/src/: display_thir.rs  expression.rs  function.rs  lib.rs  statement.rs
soul_hir/typed_hir_model/src/thir_maps/: mod.rs
soul_hir/typed_hir_parser/: Cargo.toml
soul_hir/typed_hir_parser/src/: expression.rs  finalize.rs  handle_type.rs  infer_table.rs  lib.rs  place.rs  statement.rs  type_helpers.rs
soul_ir/: Cargo.toml
soul_ir/src/: block.rs  function.rs  ir_type.rs  lib.rs  llvm_builder.rs  local.rs  operand.rs  rvalue.rs  statement.rs  utils.rs
soul_ir/src/value/: binary_unary.rs  cast.rs  mod.rs  operand.rs
soul_mir/mir_parser/: Cargo.toml
soul_mir/mir_parser/src/: global.rs  id_generators.rs  lib.rs  mir.rs  utils.rs
soul_mir/mir_parser/src/parse/: block.rs  expression.rs  function.rs  mod.rs  place.rs  statement.rs
soul_mir/mir_parser/src/parse/expressions/: conditionals.rs  mod.rs
soul_mir/run_mir/: Cargo.toml
soul_parser/: Cargo.toml
soul_parser/models/: Cargo.toml
soul_parser/src/: lib.rs
soul_sementic/hir_model/: Cargo.toml
soul_sementic/soul_hir/: Cargo.toml
soul_sementic/soul_thir/: Cargo.toml
soul_sementic/soul_thir/src/: lib.rs  lower_item.rs
soul_sementic/soul_thir/src/lower_function/: lower_body.rs  lower_expression.rs  lower_statement.rs  mod.rs
soul_sementic/soul_thir/thir_model/: Cargo.toml
soul_sementic/soul_thir/thir_model/src/: expression.rs  lib.rs  thir_ids.rs
soul_sementic/soul_thir/thir_models/: Cargo.toml
soul_sementic/soul_thir/thir_models/src/: expression.rs  lib.rs  statement.rs
soul_sementic/soul_typed_context/: Cargo.toml
soul_sementic/soul_typed_context/src/: handle_type.rs  infer_expression.rs  infer_item.rs  infer_statement.rs  lib.rs  model.rs  utils.rs
soul_sementic/soul_typed_hir/: Cargo.toml
soul_src/: main.soul
soul_tester/: .gitignore  Cargo.toml  paths.json  todo.md
soul_tester/example/: benchmark.rs
soul_tester/output/: AST_parsed.soulc  main.soulAST  main.soulAST.json  main.soulSEM  main.soulSEM.json
soul_tester/soul_folder/: Soul.toml
soul_tester/soul_folder/clib/: clib.c  clib.h
soul_tester/soul_folder/lib/clib/: clib.c  clib.h
soul_tester/soul_folder/lib/soul_std/: Soul.toml
soul_tester/soul_folder/lib/soul_std/src/Fmt/: FmtStr.soul  Write.soul
soul_tester/soul_folder/lib/soul_std/src/Io/: mod.soul
soul_tester/soul_folder/output/: out.ll
soul_tester/soul_folder/soul_core/: Soul.toml
soul_tester/soul_folder/soul_core/output/: out.ll
soul_tester/soul_folder/soul_std/output/: out.ll
soul_tester/soul_folder/soul_std/src/: lib.soul
soul_tester/soul_folder/src/: main.soul  subLib.soul  t.soul
soul_tester/soul_folder/src/Fs/: mod.soul
soul_tester/soul_folder/src/Io/: mod.soul
soul_tester/soul_folder/src/Lib/: mod.soul
soul_tester/soul_folder/src/Test/: enums.soul  ifs.soul  mod.soul
soul_tester/soul_folder/src/soul_clib/: clib.c
soul_tester/soul_src/: Lib.soul  clib.soul  fmt.soul  io.soul  main.soul  reflect.soul  subLib.soul  syntax.soul  t.soul  test_import.soul  trait.soul
soul_tester/soul_src/Lib/: mod.soul  subLib.soul
soul_tester/soul_src/Std/: Fmt.soul  pointer.soul
soul_tester/soul_src/Std/Fmt/: Write.soul
soul_tester/soul_src/Std/Io/: mod.soul  stdout.soul  test.soul
soul_tester/soul_src/core/: array.soul
soul_tester/soul_src/soul_clib/: clib.c  clib.h
soul_tester/soul_src/std/: stdalloc.soul  stdio.soul  stdstr.soul
soul_tester/soul_src/sync/: Arc.soul  Mutex.soul
soul_tester/soul_src/testSyntax/: err_handle.soul  impl_array.soul  impl_ints.soul  list.soul  map.soul  time.soul
soul_tester/src/: benchmark.rs  convert_ast.rs  convert_hir.rs  convert_soul_error.rs  display_hir.rs  display_tokenizer.rs  displayer_ast.rs  displayer_hir.rs  displayer_mir.rs  displayer_tokenizer.rs  main.rs  paths.rs
soul_tester/testSyntax/: err_handle.soul  map.soul
soul_tokenizer/: Cargo.toml
soul_tokenizer/src/: lexer.rs  lib.rs  main.rs  symbolkind_from_lexer.rs  tests.rs  token.rs  token_stream.rs
soul_utils/: Cargo.toml
soul_utils/src/: bimap.rs  char_colors.rs  compile_options.rs  crate_store.rs  custom_remind_warning.rs  define_enums.rs  error.rs  ids.rs  lib.rs  precedence.rs  print_breakpoint.rs  sementic_fault.rs  sementic_level.rs  soul_import_path.rs  soul_manifest.rs  soul_names.rs  span.rs  symbool_kind.rs  try_result.rs  vec_map.rs  vec_map_tests.rs  vec_set.rs  vec_set_tests.rs
src/: error.rs
src/steps/: mod.rs
(+269 files in other folders)
