[package]
name = "soul_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde_json = "1.0.148"
serde = {version = "1.0.228", features = ["derive"]}
soul_utils = { version = "0.1.0", path = "../soul_utils", features = ["absolute_internal_error_path"] }
soul_name_resolver = { version = "0.1.0", path = "../soul_ast/soul_name_resolver" }
ast_parser = { version = "0.1.0", path = "../soul_ast/ast_parser" }
ast = { version = "0.1.0", path = "../soul_ast/ast_model" }
soul_tokenizer = { version = "0.1.0", path = "../soul_tokenizer" }
