[package]
name = "hir_literal_interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { version = "0.1.0", path = "../../soul_ast/ast_model" }
hir = { version = "0.1.0", path = "../hir_model" }
soul_utils = { version = "0.1.0", path = "../../soul_utils" }
typed_hir = { version = "0.1.0", path = "../typed_hir_model" }
typed_hir_parser = { version = "0.1.0", path = "../typed_hir_parser" }
