[package]
name = "typed_hir"
version = "0.1.0"
edition = "2024"

[dependencies]
hir = { version = "0.1.0", path = "../hir_model" }
serde = { version = "1.0.228", features = ["derive"] }
soul_utils = { version = "0.1.0", path = "../../soul_utils" }
ast = { version = "0.1.0", path = "../../soul_ast/ast_model" }
