[package]
name = "soul_thir"
version = "0.1.0"
edition = "2024"

[dependencies]
hir_model = { version = "0.1.0", path = "../soul_hir/hir_model" }
parser_models = { version = "0.1.0", path = "../../soul_parser/models" }
soul_typed_context = { version = "0.1.0", path = "../soul_typed_context" }
soul_utils = { version = "0.1.0", path = "../../soul_utils" }
thir_model = { version = "0.1.0", path = "thir_model" }
