[package]
name = "soul_typed_context"
version = "0.1.0"
edition = "2024"

[dependencies]
hir_model = { version = "0.1.0", path = "../soul_hir/hir_model" }
parser_models = { version = "0.1.0", path = "../../soul_parser/models" }
serde = { version = "1.0.228", features = ["derive"] }
soul_hir = { version = "0.1.0", path = "../soul_hir" }
soul_utils = { version = "0.1.0", path = "../../soul_utils" }
